<resources>
    <string name="app_name">Bruinstrooms</string>
    <string name="bottom_label_nearby">Restrooms</string>
    <string name="bottom_label_search">Search</string>
    <string name="bottom_label_me">Me</string>
    <string name="bottom_label_activity">Activity</string>
    <string name="bottom_label_bookmarks">Favorites</string>
    <string name="sample_username">[username]</string>
    <string name="sample_comment">[comment]</string>
    <string name="sample_timestamp">[insert timestamp here]</string>
    <string name="no_review">No Review</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
</resources>
