<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_nearby"
        android:title="@string/bottom_label_nearby"
        android:icon="@drawable/ic_android_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_search"
        android:title="@string/bottom_label_search"
        android:icon="@drawable/ic_android_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_me"
        android:title="@string/bottom_label_me"
        android:icon="@drawable/ic_android_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_activity"
        android:title="@string/bottom_label_activity"
        android:icon="@drawable/ic_android_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_bookmark"
        android:title="@string/bottom_label_bookmarks"
        android:icon="@drawable/ic_android_black_24dp"
        android:enabled="true"
        app:showAsAction="ifRoom"/>
</menu>